<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="none"
        android:fontFamily="@font/eagle_lake"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="THE HISTORY APP"
        android:textColor="#180240"
        android:textColorHighlight="#B31047"
        android:textSize="39sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="224dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enteragetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="ENTER AGE:"
            android:textColor="#121111"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/enterage"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/resultbtn"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:text="Find Historical Figure" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clearbtn"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:text="Clear Result" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="254dp"
            android:layout_height="184dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/traced_drawing1textview" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="182dp"
            android:layout_height="91dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:inputType="text|textMultiLine"
            android:singleLine="false"
            android:text="TextView" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

</LinearLayout>